--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			localStorage.setItem("Maxscore", 0);
 		}
 		
-		mscore.innerHTML = "Max Score: " +  localStorage.getItem("Maxscore"); ;
+		mscore.innerHTML = "Max Score: " + player_max.score ;
 		
 		
 		startScreen.innerHTML = "Game Over <br> Your final score is " + player.score + " <br> Press here to restart the Game."; 
